<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Obins</string>
    <string name="app_name_title">Obins Peripherals</string>
    <string name="connect_your_keyboard">Please connect your Device.</string>
    <string name="cancle">Cancel</string>
    <string name="welcome_use_obins">Welcome! - Obins Peripherals</string>
    <string name="no_device_tip">Couldn't detect a device. Please connect your device via Bluetooth to continue!</string>
    <string name="goon_tip">Continue</string>
    <string name="mydevice">My Devices</string>
    <string name="main_effect">Light effects</string>
    <string name="main_layout">Alignment</string>
    <string name="main_macro">Macro Settings</string>
    <string name="main_setting">Settings</string>
    <string name="new_verison_find">Find new version</string>
    <string name="control_success">control success</string>
    <string name="control_faile">control erro</string>
    <string name="light_effect_title">Light Effects</string>
    <string name="light_effect_off">Off</string>
    <string name="light_effect_title_dynamic">Dynamic</string>
    <string name="light_effect_title_staic">Static</string>
    <string name="light_effect_title_user">Custom</string>
    <string name="light_effect_theme_red">Red</string>
    <string name="light_effect_theme_yellow">Yellow</string>
    <string name="light_effect_theme_green">Green</string>
    <string name="light_effect_theme_cyan">Cyan</string>
    <string name="light_effect_theme_blue">Blue</string>
    <string name="light_effect_theme_pure">Purple</string>
    <string name="light_effect_theme_pink">Pink</string>
    <string name="light_effect_theme_orange">Orange</string>
    <string name="light_effect_theme_white">White</string>
    <string name="light_effect_theme_flag_france">French flag</string>
    <string name="light_effect_theme_flag_italy">Italian flag</string>
    <string name="light_effect_theme_flag_argentina">Argentinian flag</string>
    <string name="light_effect_theme_breath">Breathing light</string>
    <string name="light_effect_theme_rainbow">Rainbow light</string>
    <string name="light_effect_theme_single_trigger_breath">Responsive Single Key (short)</string>
    <string name="light_effect_theme_single_trigger_on">Responsive Single Key (infinite)</string>
    <string name="light_effect_theme_single_trigger_poptang">Responsive Cross Light (short)</string>
    <string name="light_effect_theme_multi_colored">Random Colors</string>
    <string name="light_user_setting">Custom Light Settings</string>
    <string name="light_effect_name">Light Profile Name</string>
    <string name="light_effect_basic_setting">Basic Settings</string>
    <string name="light_effect_basic_setting_brightness">Brightness Level</string>
    <string name="light_effect_dynamics_color_setting">Dynamic</string>
    <string name="light_effect_satic_color_setting">Static</string>
    <string name="light_effect_satic_color_setting_all">All</string>
    <string name="light_effect_satic_color_setting_side">Modifiers</string>
    <string name="light_effect_satic_color_setting_number">Numbers</string>
    <string name="light_effect_satic_color_setting_letter">Alphas</string>
    <string name="light_effect_satic_color_setting_cancel">Cancel</string>
    <string name="light_user_color_title">Custom Colors</string>
    <string name="light_user_color_user_defined_param">Customize RGB colors</string>
    <!-- color disk? --><string name="light_user_color_user_defined_color_disc">Color disk</string>
    <string name="light_user_color_user_defined_default_color">Default color</string>
    <string name="control_light_now">Switching Light Profile...</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="please_input_lighteffect_name">Profile Name</string>
    <string name="lighteffect_pure_color">Change Colors</string>
    <string name="color">Color</string>
    <string name="tip">Tip</string>
    <string name="is_delete_lighteffect">Deleting this Light Profile...</string>
    <string name="save_success">Profile Successfully Saved.</string>
    <string name="cant_beyond_255">The colorrange is limited from 0 to 255.</string>
    <string name="macro_title">Macro Settings</string>
    <string name="macro_go">App</string>
    <string name="macro_name">Macro Name</string>
    <string name="macro_tigger">Trigger Key</string>
    <string name="macro_record">Record Macros</string>
    <string name="macro_list">Program A Macro:</string>
    <string name="macro_finish">Save</string>
    <!-- change the whole macro section from here --><string name="macro_modify_tip">After modify，must application then can use!</string>
    <string name="macro_download_tip">Sending this Macro to your Keyboard</string>
    <string name="set_macro_success">Macro successfully set up.</string>
    <string name="set_macro_fail">The Macro set up failed!</string>
    <string name="no_name">Macro is missing a name!</string>
    <string name="macro_support_most_10_tip">You can only set up max. 10 Macros.</string>
    <string name="macro_delete_tip">Deleting this Macro.</string>
    <string name="please_input_macro_name">Please input a Macro name.</string>
    <string name="macro_support_most_20_key_tip">You can only use 20 characters in your Macro name.</string>
    <string name="please_input_tigger_key">Please select a trigger key for your Macro.</string>
    <string name="open_macro_record">Open Macro Recorder</string>
    <string name="macro_cant_move">Cant move！</string>
    <string name="macro_support_record_60_sec">You can only record Macros up to 60 seconds of length.</string>
    <string name="macro_open_record_success">Open macro record success!</string>
    <!-- to here --><string name="macro_open_record_fail">Open macro record error!</string>
    <string name="selected_key_title">Select Key</string>
    <string name="selected_key_system">System</string>
    <string name="selected_key_letter">Letter</string>
    <string name="selected_key_num">Number</string>
    <string name="selected_key_symbol">Symbol</string>
    <string name="selected_key_bigkey">Modifier</string>
    <string name="selected_key_fun">Function Key</string>
    <string name="selected_key_media">Media Key</string>
    <string name="layout_title">Alignment</string>
    <string name="layout_default_1">Default QWERTY</string>
    <string name="layout_default_1_desc">The standard Anne layout</string>
    <string name="layout_default_2">QWERTY with arrow keys</string>
    <string name="layout_default_2_desc">Anne layout with dedicated arrow keys</string>
    <string name="layout_default_3">MAC Layout</string>
    <string name="layout_default_3_desc">MAC Layout</string>
    <string name="layout_save">Save</string>
    <string name="layout_name">Layout Name</string>
    <!-- fix this --><string name="layout_standard_region_title">Standard key area</string>
    <string name="layout_fn_region_title">FN key area</string>
    <string name="layout_custom">Custom Alignment</string>
    <string name="unknow">Unknow</string>
    <string name="layout_default">Default Layout</string>
    <string name="setting">Settings...</string>
    <string name="layout_selected">Select Layout</string>
    <string name="layout_must_have_anne_fn_key">You must specify an Anne and FN key!</string>
    <string name="layout_detail_title">Alignment Details</string>
    <string name="layout_mark">Mark</string>
    <string name="saving">Saving Layout...</string>
    <string name="setting_title">Settings</string>
    <string name="setting_about_device">About Device</string>
    <string name="setting_device_model">Model</string>
    <string name="setting_device_info">Device Information</string>
    <string name="setting_run_mode">Running mode</string>
    <string name="setting_other">Other</string>
    <string name="setting_app_version">App Version</string>
    <string name="setting_online_manual">Online Manual</string>
    <string name="setting_about_obins">About Obins</string>
    <string name="setting_about_obins_desc">Obins is a young peripheral brand. We design with our heart and try to reach breakthroughs in the peripheral device industry. We try to create a different and better user experience with our enthusiasm and determination.</string>
    <string name="setting_current_version">Current version</string>
    <string name="setting_mode_normal">Standard</string>
    <string name="setting_mode_com">Compatible</string>
    <string name="setting_device_list">Device list</string>
    <string name="setting_device_id">ID</string>
    <string name="setting_main_mcu_version">Main MCU Version</string>
    <string name="setting_other_mcu_version">Another Mcu Version</string>
    <string name="setting_ble_mcu_version">Bluetooth Version</string>
    <string name="setting_ble_fw">Bluetooth FW</string>
    <string name="setting_check_fw_ver">Check Version</string>
    <string name="check_kb_fw_ver">Check KB FW Version:</string>
    <string name="now_ble_fw_ver">Bluetooth FW Version: V</string>
    <string name="checking_fw_version">Checking FW Version...</string>
    <string name="find_no_keyboard">Couldn't find any device!</string>
    <string name="get_fw_erro">Couldn't gather the firmware version.</string>             <!-- fix this section from here -->
    <string name="get_fw_success">Firmware Version succesfully gathered!</string>
    <string name="is_new_fw">There is a new Firmware version!</string>
    <string name="sure">Sure</string>
    <!-- fix this --> <string name="find_new_ver">, find a new FW Version</string>
    <!-- fix this --> <string name="find_new_ver_1">find new a FW Version!</string>
    <string name="start_update">Update</string>
    <string name="mode">Mode</string>                                                     <!-- to here -->
    <string name="mode_standard">Standard Mode</string>
    <string name="mode_compatible">Compatible Mode</string>
    <string name="mode_standard_info">Standard Mode: MAC OSX 10.10.2+, Windows8, Windows10, Android4.4+, IOS7.0+</string>
    <string name="mode_compatible_info">Compatible Mode: Windows7, Windows8, Windows10, Android4.4+, IOS7.0+. Compatible mode increases the power consumption!</string>
    <string name="is_sure_modify_mode">Are you sure you want to change the mode of you keyboard?</string>
    <string name="check_app_version">Check App Version</string>
    <!-- fix this --> <string name="get_app_version_fail">Get apk fail</string>
    <string name="is_new_app">There is a new App version available.</string>
    <string name="update">Update</string>
    <string name="find_new_app">Found a new version! V</string>
    <string name="find_new_app_1">Found a new app version!</string>
    <string name="kb_data_sync">Keyboard data synchronization!</string>
    <string name="sync_lighteffect_success">LED profile synchronization finished successfully!</string>
    <string name="sync_alignment_success">Layout synchronization finished successfully!</string>
    <string name="sync_macro_success">Macro synchronization finished successfully!</string>
    <string name="sync_lighteffect_fail">Lighteffect sync fail!</string>
    <string name="sync_alignment_fail">Alignment sync fail!</string>
    <string name="sync_macro_fail">Macro sync fail!</string>
    <string name="sync_fail">Synchronizaton failed!</string>
    <string name="sync_success">Synchronization finished successfully!</string>
    <string name="music_list">Music</string>
</resources>
