<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/main_bk_black" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/tip_RelativeLayout" android:background="@color/main_top_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001"
        <RelativeLayout android:id="@+id/backBtn" android:paddingLeft="15dp" android:paddingRight="8dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_centerVertical="true">
            <ImageView android:background="@drawable/menu_return" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="18sp" android:textColor="@color/main_font_green" android:id="@+id/activity_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layout_detail_title" android:layout_centerInParent="true" />
        <RelativeLayout android:id="@+id/delete_RelativeLayout" android:layout_width="UNKNOWN_DATA_0x3001" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_toLeftOf="@+id/save_RelativeLayout">
            <TextView android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delete" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/save_RelativeLayout" android:layout_width="UNKNOWN_DATA_0x2d01" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_alignParentRight="true">
            <TextView android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/gradientbutton_transparent_edge_orange" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x5a01" android:layout_marginLeft="15dp" android:layout_marginTop="25dp" android:layout_marginRight="15dp" android:weightSum="2.0">
        <RelativeLayout android:id="@+id/name_RelativeLayout" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_weight="1.0">
            <View android:background="@color/main_diver_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_alignParentBottom="true" />
            <TextView android:textSize="13sp" android:textColor="@color/custommacro_font_gray" android:id="@+id/gropNameTiltle_TextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/layout_name" android:layout_centerVertical="true" />
            <EditText android:textSize="18sp" android:textColor="@color/main_bk_blue" android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/name_TextView" android:background="#00000000" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:hint="" android:singleLine="true" android:layout_toRightOf="@+id/gropNameTiltle_TextView" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/content_RelativeLayout" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_weight="1.0">
            <EditText android:textSize="13sp" android:textColor="@color/main_bk_blue" android:id="@+id/content_TextView" android:background="#00000000" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:text="" android:hint="@string/layout_mark" android:singleLine="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textColor="@color/lighteffectpage_titletip_selected_orange" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/layout_standard_region_title" />
    <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginLeft="15dp" android:layout_marginTop="5dp" android:layout_marginRight="15dp" android:layout_marginBottom="10dp" />
    <include android:id="@+id/keyboard_LinearLayout1" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" layout="@layout/layout_keyboardalignment" />
    <TextView android:textColor="@color/lighteffectpage_titletip_selected_orange" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="50dp" android:text="@string/layout_fn_region_title" />
    <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginLeft="15dp" android:layout_marginTop="5dp" android:layout_marginRight="15dp" android:layout_marginBottom="10dp" />
    <include android:id="@+id/keyboard_LinearLayout2" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_marginLeft="0dp" android:layout_marginRight="0dp" layout="@layout/layout_keyboardalignment" />
</LinearLayout>
