<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/main_bk_black" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/tip_RelativeLayout" android:background="@color/main_top_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001"
        <RelativeLayout android:id="@+id/backBtn" android:paddingLeft="15dp" android:paddingRight="8dp" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_centerVertical="true">
            <ImageView android:background="@drawable/menu_return" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:textSize="18sp" android:textColor="@color/main_font_green" android:id="@+id/activity_title_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selected_key_title" android:layout_centerInParent="true" />
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_system" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView1" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_letter" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView2" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout3" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_num" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView3" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout4" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_symbol" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView4" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout5" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_bigkey" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView5" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout6" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_fun" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView6" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout7" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="13sp" android:textColor="@color/main_bk_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="30dp" android:text="@string/selected_key_media" />
                <View android:background="@color/main_divider_gray" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x100" android:layout_marginTop="10dp" />
                <com.obins.anne.viewpart.GridViewForScrollView android:id="@+id/gridView7" android:scrollbars="UNKNOWN_DATA_0x0" android:layout_width="match_parent" android:layout_height="wrap_content" android:numColumns="UNKNOWN_DATA_0x4" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
